--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "productivity"
   ],
   "repository": "https://github.com/mrdayamzaidi/WhiteEyeUserBot",
+  "website": "starkgang.ml",
   "success_url": "t.me/WhiteEyeOT",
   "env": {
     "ENV": {
